--- a/CRUD com SQLite/CRUD com SQLite/CRUD com SQLite.csproj
+++ b/CRUD com SQLite/CRUD com SQLite/CRUD com SQLite.csproj
@@ -17,6 +17,17 @@
 
   <ItemGroup>
     <Folder Include="Helper\" />
-    <Folder Include="View\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="View\EditarProduto.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="View\Listagem.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="View\NovoProduto.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
